# findminhs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Pipfile  README.md  settings.json
data/: calc_stats.py
evaluation/: .gitignore  README.md  build.sh  evaluation.ipynb  run.py
evaluation/lib/: run.py
evaluation/paper/: .gitignore  README.md  build.sh  evaluation.ipynb  run.py
evaluation/paper/lib/: run.py
evaluation/results/classification/: abs-pos-new.csv  base-new.csv  base-really-slow.csv  base.csv
evaluation/results/fast-candidates-10/: abs-pos-new.csv  base-new.csv  base.csv
evaluation/thesis/: eval.ipynb
evaluation/thesis/results/classification/: abs-pos.csv  base-slow.csv
evaluation/thesis/results/easy-10/: abs-pos.csv  base.csv
evaluation/thesis/results/fast-candidates-10/: abs-pos.csv
src/: activity.rs  instance.rs  lower_bound.rs  main.rs  reductions.rs  report.rs  small_indices.rs  solve.rs  subsuperset.rs
src/data_structures/: cont_idx_vec.rs  mod.rs  segtree.rs  set_tries.rs  skipvec.rs  subset_trie.rs  superset_trie.rs
