[package]
name = "findminhs"
version = "0.1.0"
authors = ["David Stangl <david.stangl@student.hpi.de>"]
edition = "2018"

[features]
debug-skipvec = []

[dependencies]
anyhow = "1.0"
derivative = "2.1"
env_logger = "0.8"
fxhash = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
# log = { version = "0.4", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[profile.release]
lto = true
